create an event by cliking on the element the alert will define the html element

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>HTML help</h1>
+        <p>This is s very spesial page. If ckick cimewhere, ot will tell you what type of html element you clicked on</p>
+
+        <p>Look at this cute walrus!</p>
+        <img src="img/walrus.jpeg" alt="A cute walrus">
+    </div>
+
+
+    <script src="js/jquery-1.9.1.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
